# ColdStorage

./: CMakeLists.txt  Main.qml  MyClock.qml  MyProgressBar.qml  PopUpShelves.qml  PopUpStart.qml  PopUpStop.qml  ProgressBar.qml  SettingsPanel.qml  StoragePlaceDelegate.qml  apiclient.cpp  apiclient.h  db.sql  main.cpp  products.cpp  products.h  shelves.cpp  shelves.h  storageplaces.cpp  storageplaces.h
